My latest point after getting authentication working.

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:957b6537318c1efb318e84c861d6fac55ca77fac0707459b849f4534bd47bae1"
+  "signature": "sha256:6aa573f3451c49dd77b1d688e79229014f1435ed8e922b09f609c2f62c6214e7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,11 +12,258 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#iPython notebooks are being a pain. They seem to be ignoring the $PYTHONPATH variable.\n",
+      "#iPython notebooks are being a pain. They seem to be ignoring the $PYTHONPATH variable.\\n\",\n",
       "import sys\n",
       "sys.path.append('/var/www/ipython/spittalpond/')\n",
       "\n",
+      "import requests\n",
+      "import json\n",
+      "import time\n",
+      "from IPython.display import display, HTML\n",
+      "\n",
       "import spittalpond"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def is_logged_in():\n",
+      "    pass\n",
+      "#    Function isloggedin() As Boolean\n",
+      "#    If wf Is Nothing Then #Set wf = New Workflow\n",
+      "#    MsgBox (\"You are not logged in. Please login.\")\n",
+      "#    isloggedin = False\n",
+      "#    Exit Function\n",
+      "#    End If\n",
+      "#    isloggedin = True\n",
+      "#    End Function"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def do_request_object(self, var):\n",
+      "    str_response = None\n",
+      "    url = None\n",
+      "    in_data = None\n",
+      "    if len(var) == 1:\n",
+      "        url = self.base_url + var[0]\n",
+      "    elif len(var) == 2:\n",
+      "        url = self.base_url + var[0]\n",
+      "        in_data = var[1]\n",
+      "    elif len(var) != 0 and len(var) != 1:\n",
+      "        print(\"Invalid parameters to dorequest \")\n",
+      "        return None\n",
+      "\n",
+      "    #objHTTP.Open \"POST\", url, False\n",
+      "    #objHTTP.setRequestHeader \"User-Agent\", \"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0)\"\n",
+      "    #objHTTP.setRequestHeader \"Content-type\", \"application/x-www-form-urlencoded\"\n",
+      "    #objHTTP.Send (indata)\n",
+      "    #strResponse = objHTTP.ResponseText\n",
+      "    if in_data != None:\n",
+      "        response = self.do_request(url, data=in_data)\n",
+      "    else:\n",
+      "        response = self.do_request(url)\n",
+      "    return response  \n",
+      "    #Set dorequestObject = lib.parse(CStr(strResponse))\n",
+      "    #If dorequestObject.exists(\"not_authenticated\") Then\n",
+      "    #    Err.Raise 1212, \"WebSession.dorequestObject\", \"Not authenticated\"\n",
+      "    #End If\n",
+      "    #End Function\n",
+      "spittalpond.SpittalPond.do_request_object = do_request_object        \n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      " def create_toymodel():\n",
+      "    event_dict_id = None\n",
+      "    area_peril_dict_id = None\n",
+      "    vuln_dict_id = None\n",
+      "    hazard_intensity_bin_dict_id = None\n",
+      "    damage_bin_dict_id = None\n",
+      "    hazfp_version_id = None\n",
+      "    vuln_version_id = None\n",
+      "    hazfp_instance_id = None\n",
+      "    vuln_instance_id = None\n",
+      "    \n",
+      "    upload_file = \"test.txt\"\n",
+      "    upload_filename = upload_file #This name could contain the now_str\n",
+      "    \n",
+      "    #'Checks for login status\n",
+      "    #If isloggedin = False Then Exit Sub\n",
+      "    if True:\n",
+      "        #'create timestamp for destination files\n",
+      "        str_now = \"\"\n",
+      "        prepend_time_stamp = True #Shoudl be yest no diaglogue here.\n",
+      "        if prepend_time_stamp: \n",
+      "            str_now = time.strftime(\"%Y%m%d_%H%M%S_\", time.localtime())\n",
+      "            upload_filename = str_now + upload_filename\n",
+      "        \n",
+      "        \"\"\"\n",
+      "        'Creates Event Dict\n",
+      "        print(\"Creating Model\")\n",
+      "        #Range(\"rngDictEventFile1\").Offset(0, 8).value = str_now\n",
+      "        event_dict_id = spittal.new_event_dict(model_name, #Range(\"rngModelName\").value, \n",
+      "                                      pub_user & \"_\" & str_now & file_name, #Range(\"rngDictEventFile1\").value, \n",
+      "                                      file_name, #Range(\"rngDictEventFile1\").value, \n",
+      "                                      1 #This is some typ of value#Range(\"optModuleSupplierDict\").value\n",
+      "                    )\n",
+      "        #Range(\"rngDictEventFile1\").Offset(0, 7).value = eventdictid\n",
+      "        #Range(\"rngDictEventFile1\").Offset(0, 15).value = \"Created\"\n",
+      "        print(\"Created\")\n",
+      "        \"\"\"\n",
+      "        #dorequestObject(\"/oasis/createFileUpload/\" & name & \"/\" & filename & \"/\" & modulesupplierid & \"/\")\n",
+      "        response = spittal.do_request_object([\"/oasis/createFileUpload/\" + \"root\" + \"/\" + upload_filename + \"/\" + \"1\" + \"/\"])\n",
+      "        print response\n",
+      "        spittal.upload_file(upload_file, upload_file)\n",
+      "    \n",
+      "    #Application.StatusBar = \"\"\n",
+      "        print(\"Model tasks created.\\n\\n\"\n",
+      "              \"Now you should upload the files to the Oasis mid-tier.\"\n",
+      "              \"Use the Upload files macro for small files (<20MB)\"\n",
+      "              \"or a file transfer tool such as WinSCP for large files.\")\n",
+      "    \n",
+      "#def new_event_dict(name, uploadfilename, downloadfilename, modulesupplier):\n",
+      "#    Dim ObjectUpload, ObjectDownload, ObjectMainTask As Object\n",
+      "#    Dim uploadid As Integer\n",
+      "#    Dim downloadid As Integer\n",
+      "#    Set ObjectUpload = ws.createFileUpload(uploadfilename, uploadfilename, modulesupplier)\n",
+      "#    uploadid = ObjectUpload(\"id\")\n",
+      "#    Set ObjectDownload = ws.createFileDownload(downloadfilename, downloadfilename, modulesupplier)\n",
+      "#    downloadid = ObjectDownload(\"id\")\n",
+      "#    Set ObjectMainTask = ws.createEventDict(name, modulesupplier, uploadid, downloadid)\n",
+      "#    newEventDict = ObjectMainTask(\"id\")\n",
+      "\n",
+      "    #'Create functions start here\n",
+      "    #Function createFileUpload(name As String, filename As String, modulesupplierid As Integer) As Object\n",
+      "    #    Set createFileUpload = ws.dorequestObject(\"/oasis/createFileUpload/\" & name & \"/\" & filename & \"/\" & modulesupplierid & \"/\")#\n",
+      "    #End Function\n",
+      "    \n",
+      "    #Function createFileDownload(name As String, filename As String, modulesupplierid As Integer) As Object\n",
+      "    #    Set createFileDownload = ws.dorequestObject(\"/oasis/createFileDownload/\" & name & \"/\" & filename & \"/\" & modulesupplierid & \"/\")\n",
+      "    #End Function\n",
+      "\n",
+      "        #Function dorequestObject(ParamArray var() As Variant) As Object\n",
+      "        #Dim strResponse As String\n",
+      "        #Dim url As String\n",
+      "        #Dim indata As String\n",
+      "        #    If UBound(var) = 0 Then\n",
+      "        #        url = baseurl & var(0)\n",
+      "        #    End If\n",
+      "        #    If UBound(var) = 1 Then\n",
+      "        #        url = baseurl & var(0)\n",
+      "        #        indata = var(1)\n",
+      "        #    End If\n",
+      "        #    \n",
+      "        #    If UBound(var) <> 0 And UBound(var) <> 1 Then\n",
+      "        #        MsgBox \"Invalid parameters to dorequest \"\n",
+      "        #        Exit Function\n",
+      "        #    End If\n",
+      "        #    objHTTP.Open \"POST\", url, False\n",
+      "        #    objHTTP.setRequestHeader \"User-Agent\", \"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0)\"\n",
+      "        #    objHTTP.setRequestHeader \"Content-type\", \"application/x-www-form-urlencoded\"\n",
+      "        #    objHTTP.Send (indata)\n",
+      "        #    strResponse = objHTTP.ResponseText\n",
+      "        #    Set dorequestObject = lib.parse(CStr(strResponse))\n",
+      "        #    If dorequestObject.exists(\"not_authenticated\") Then\n",
+      "        #        Err.Raise 1212, \"WebSession.dorequestObject\", \"Not authenticated\"\n",
+      "        #    End If\n",
+      "        #End Function\n",
+      "\n",
+      "    #Function createAreaPerilDict(name As String, modulesupplierid As Integer, fileuploadid As Integer, filedownloadid As Integer) As Object\n",
+      "    #    Set createAreaPerilDict = ws.dorequestObject(\"/oasis/createAreaPerilDict/\" & name & \"/\" & modulesupplierid & \"/\" & fileuploadid & \"/\" & filedownloadid & \"/\")\n",
+      "    #End Function\n",
+      "    \n",
+      "#Function createVulnDict(name As String, modulesupplierid As Integer, fileuploadid As Integer, filedownloadid As Integer) As Object\n",
+      "#    Set createVulnDict = ws.dorequestObject(\"/oasis/createVulnDict/\" & name & \"/\" & modulesupplierid & \"/\" & fileuploadid & \"/\" & filedownloadid & \"/\")\n",
+      "#End Function"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def upload_file(self, local_file_path, destination_file_path):\n",
+      "    url = self.base_url + \"/oasis/doTaskUploadFileHelper/\"  #self.upload_file_url\n",
+      "    \n",
+      "    boundary = \"AaB03x\"\n",
+      "    \n",
+      "    with open(local_file_path) as f:\n",
+      "        in_file = f\n",
+      "        form_data = f.read()\n",
+      "    \n",
+      "    in_data = \"\"\"\\\n",
+      "        --{boundary}\n",
+      "        Content-Disposition: form-data; name=\"{destination}\";filename=\"{destination}\"\n",
+      "        Content-Type: text/plain\n",
+      "        \n",
+      "        {form_data}\n",
+      "        --{boundary}--\n",
+      "        \"\"\".format(\n",
+      "                boundary=boundary,\n",
+      "                destination=destination_file_path,\n",
+      "                form_data=form_data\n",
+      "        )\n",
+      "        #send fiels...\n",
+      "    str_response = self.do_request(url, in_data)\n",
+      "    #str_response=requests.post(\"http://tmrbmub01prd:8000/oasis/doTaskUploadFileHelper/\", files={'file':in_file})\n",
+      "    #HTML(str_response.content)\n",
+      "        \n",
+      "spittalpond.SpittalPond.upload_file = upload_file        \n",
+      "        \n",
+      "#Sub UploadFile(LocalFilePath As String, DestinationFile As String)\n",
+      "#    Dim WinHttpReq As Object\n",
+      "#    Set WinHttpReq = CreateObject(\"WinHttp.WinHttpRequest.5.1\")\n",
+      "#    Dim strURL As String\n",
+      "#    'Dim strFilename As String\n",
+      "#    Dim FormFields As String\n",
+      "#    Call setbaseurl\n",
+      "#    strURL = baseurl & \"/oasis/doTaskUploadFileHelper/\"\n",
+      "#      \n",
+      "#    'Boundary of field - must not be in the source file\n",
+      "#    Const Boundary As String = \"AaB03x\"\n",
+      "#    \n",
+      "#    sFormData = GetFile(LocalFilePath)\n",
+      "#      \n",
+      "#    WinHttpReq.Open \"POST\", strURL, False\n",
+      "#    WinHttpReq.setRequestHeader \"Content-Type\", \"multipart/form-data; boundary=\" & Boundary\n",
+      "#\n",
+      "#    'Build source form with file contents\n",
+      "#    D = D & \"--\" & Boundary & vbCrLf\n",
+      "#    D = D & \"Content-Disposition: form-data; name=\"\"\" & DestinationFile & \"\"\"\" & \";filename=\"\"\" & DestinationFile & \"\"\"\" & vbCrLf\n",
+      "#    'MsgBox D\n",
+      "#    D = D & \"Content-Type: text/plain\" & vbCrLf & vbCrLf\n",
+      "#    D = D & sFormData & vbCrLf\n",
+      "#    D = D & \"--\" & Boundary & \"--\" & vbCrLf\n",
+      "#    \n",
+      "#    'MsgBox D\n",
+      "#    \n",
+      "#    WinHttpReq.Send D\n",
+      "#     \n",
+      "#    WinHttpReq.GetAllResponseHeaders\n",
+      "#    WinHttpReq.ResponseText\n",
+      "#    'MsgBox \"OK\"\n",
+      "#End Sub"
      ],
      "language": "python",
      "metadata": {},
@@ -28,7 +275,10 @@
      "collapsed": false,
      "input": [
       "spittal = spittalpond.SpittalPond()\n",
-      "spittal.do_login('root', 'password')"
+      "spittal.do_login('root', 'password')\n",
+      "\n",
+      "html = create_toymodel()\n",
+      "HTML(html.content)"
      ],
      "language": "python",
      "metadata": {},
@@ -39,8 +289,28 @@
        "text": [
         "You are logged into Mid-tier\n"
        ]
+      },
+      {
+       "html": [
+        "{\"status\": \"done\", \"id\": \"296\", \"success\": true, \"JobId\": \"0\"}"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "<IPython.core.display.HTML at 0x7facce380e50>"
+       ]
       }
      ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 5
     },
     {
