--- a/main.ipynb
+++ b/main.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6aa573f3451c49dd77b1d688e79229014f1435ed8e922b09f609c2f62c6214e7"
+  "signature": "sha256:4c2c10be95d2e208e043157d0939ec5dbbe13d082eb3a640043dedb01f2c795d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -27,26 +27,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def is_logged_in():\n",
-      "    pass\n",
-      "#    Function isloggedin() As Boolean\n",
-      "#    If wf Is Nothing Then #Set wf = New Workflow\n",
-      "#    MsgBox (\"You are not logged in. Please login.\")\n",
-      "#    isloggedin = False\n",
-      "#    Exit Function\n",
-      "#    End If\n",
-      "#    isloggedin = True\n",
-      "#    End Function"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -85,119 +65,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      " def create_toymodel():\n",
-      "    event_dict_id = None\n",
-      "    area_peril_dict_id = None\n",
-      "    vuln_dict_id = None\n",
-      "    hazard_intensity_bin_dict_id = None\n",
-      "    damage_bin_dict_id = None\n",
-      "    hazfp_version_id = None\n",
-      "    vuln_version_id = None\n",
-      "    hazfp_instance_id = None\n",
-      "    vuln_instance_id = None\n",
-      "    \n",
-      "    upload_file = \"test.txt\"\n",
-      "    upload_filename = upload_file #This name could contain the now_str\n",
-      "    \n",
-      "    #'Checks for login status\n",
-      "    #If isloggedin = False Then Exit Sub\n",
-      "    if True:\n",
-      "        #'create timestamp for destination files\n",
-      "        str_now = \"\"\n",
-      "        prepend_time_stamp = True #Shoudl be yest no diaglogue here.\n",
-      "        if prepend_time_stamp: \n",
-      "            str_now = time.strftime(\"%Y%m%d_%H%M%S_\", time.localtime())\n",
-      "            upload_filename = str_now + upload_filename\n",
-      "        \n",
-      "        \"\"\"\n",
-      "        'Creates Event Dict\n",
-      "        print(\"Creating Model\")\n",
-      "        #Range(\"rngDictEventFile1\").Offset(0, 8).value = str_now\n",
-      "        event_dict_id = spittal.new_event_dict(model_name, #Range(\"rngModelName\").value, \n",
-      "                                      pub_user & \"_\" & str_now & file_name, #Range(\"rngDictEventFile1\").value, \n",
-      "                                      file_name, #Range(\"rngDictEventFile1\").value, \n",
-      "                                      1 #This is some typ of value#Range(\"optModuleSupplierDict\").value\n",
-      "                    )\n",
-      "        #Range(\"rngDictEventFile1\").Offset(0, 7).value = eventdictid\n",
-      "        #Range(\"rngDictEventFile1\").Offset(0, 15).value = \"Created\"\n",
-      "        print(\"Created\")\n",
-      "        \"\"\"\n",
-      "        #dorequestObject(\"/oasis/createFileUpload/\" & name & \"/\" & filename & \"/\" & modulesupplierid & \"/\")\n",
-      "        response = spittal.do_request_object([\"/oasis/createFileUpload/\" + \"root\" + \"/\" + upload_filename + \"/\" + \"1\" + \"/\"])\n",
-      "        print response\n",
-      "        spittal.upload_file(upload_file, upload_file)\n",
-      "    \n",
-      "    #Application.StatusBar = \"\"\n",
-      "        print(\"Model tasks created.\\n\\n\"\n",
-      "              \"Now you should upload the files to the Oasis mid-tier.\"\n",
-      "              \"Use the Upload files macro for small files (<20MB)\"\n",
-      "              \"or a file transfer tool such as WinSCP for large files.\")\n",
-      "    \n",
-      "#def new_event_dict(name, uploadfilename, downloadfilename, modulesupplier):\n",
-      "#    Dim ObjectUpload, ObjectDownload, ObjectMainTask As Object\n",
-      "#    Dim uploadid As Integer\n",
-      "#    Dim downloadid As Integer\n",
-      "#    Set ObjectUpload = ws.createFileUpload(uploadfilename, uploadfilename, modulesupplier)\n",
-      "#    uploadid = ObjectUpload(\"id\")\n",
-      "#    Set ObjectDownload = ws.createFileDownload(downloadfilename, downloadfilename, modulesupplier)\n",
-      "#    downloadid = ObjectDownload(\"id\")\n",
-      "#    Set ObjectMainTask = ws.createEventDict(name, modulesupplier, uploadid, downloadid)\n",
-      "#    newEventDict = ObjectMainTask(\"id\")\n",
-      "\n",
-      "    #'Create functions start here\n",
-      "    #Function createFileUpload(name As String, filename As String, modulesupplierid As Integer) As Object\n",
-      "    #    Set createFileUpload = ws.dorequestObject(\"/oasis/createFileUpload/\" & name & \"/\" & filename & \"/\" & modulesupplierid & \"/\")#\n",
-      "    #End Function\n",
-      "    \n",
-      "    #Function createFileDownload(name As String, filename As String, modulesupplierid As Integer) As Object\n",
-      "    #    Set createFileDownload = ws.dorequestObject(\"/oasis/createFileDownload/\" & name & \"/\" & filename & \"/\" & modulesupplierid & \"/\")\n",
-      "    #End Function\n",
-      "\n",
-      "        #Function dorequestObject(ParamArray var() As Variant) As Object\n",
-      "        #Dim strResponse As String\n",
-      "        #Dim url As String\n",
-      "        #Dim indata As String\n",
-      "        #    If UBound(var) = 0 Then\n",
-      "        #        url = baseurl & var(0)\n",
-      "        #    End If\n",
-      "        #    If UBound(var) = 1 Then\n",
-      "        #        url = baseurl & var(0)\n",
-      "        #        indata = var(1)\n",
-      "        #    End If\n",
-      "        #    \n",
-      "        #    If UBound(var) <> 0 And UBound(var) <> 1 Then\n",
-      "        #        MsgBox \"Invalid parameters to dorequest \"\n",
-      "        #        Exit Function\n",
-      "        #    End If\n",
-      "        #    objHTTP.Open \"POST\", url, False\n",
-      "        #    objHTTP.setRequestHeader \"User-Agent\", \"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0)\"\n",
-      "        #    objHTTP.setRequestHeader \"Content-type\", \"application/x-www-form-urlencoded\"\n",
-      "        #    objHTTP.Send (indata)\n",
-      "        #    strResponse = objHTTP.ResponseText\n",
-      "        #    Set dorequestObject = lib.parse(CStr(strResponse))\n",
-      "        #    If dorequestObject.exists(\"not_authenticated\") Then\n",
-      "        #        Err.Raise 1212, \"WebSession.dorequestObject\", \"Not authenticated\"\n",
-      "        #    End If\n",
-      "        #End Function\n",
-      "\n",
-      "    #Function createAreaPerilDict(name As String, modulesupplierid As Integer, fileuploadid As Integer, filedownloadid As Integer) As Object\n",
-      "    #    Set createAreaPerilDict = ws.dorequestObject(\"/oasis/createAreaPerilDict/\" & name & \"/\" & modulesupplierid & \"/\" & fileuploadid & \"/\" & filedownloadid & \"/\")\n",
-      "    #End Function\n",
-      "    \n",
-      "#Function createVulnDict(name As String, modulesupplierid As Integer, fileuploadid As Integer, filedownloadid As Integer) As Object\n",
-      "#    Set createVulnDict = ws.dorequestObject(\"/oasis/createVulnDict/\" & name & \"/\" & modulesupplierid & \"/\" & fileuploadid & \"/\" & filedownloadid & \"/\")\n",
-      "#End Function"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -225,50 +93,83 @@
       "                form_data=form_data\n",
       "        )\n",
       "        #send fiels...\n",
-      "    str_response = self.do_request(url, in_data)\n",
+      "    response = self.do_request(url, in_data)\n",
+      "    print(response.content)\n",
       "    #str_response=requests.post(\"http://tmrbmub01prd:8000/oasis/doTaskUploadFileHelper/\", files={'file':in_file})\n",
       "    #HTML(str_response.content)\n",
       "        \n",
-      "spittalpond.SpittalPond.upload_file = upload_file        \n",
-      "        \n",
-      "#Sub UploadFile(LocalFilePath As String, DestinationFile As String)\n",
-      "#    Dim WinHttpReq As Object\n",
-      "#    Set WinHttpReq = CreateObject(\"WinHttp.WinHttpRequest.5.1\")\n",
-      "#    Dim strURL As String\n",
-      "#    'Dim strFilename As String\n",
-      "#    Dim FormFields As String\n",
-      "#    Call setbaseurl\n",
-      "#    strURL = baseurl & \"/oasis/doTaskUploadFileHelper/\"\n",
-      "#      \n",
-      "#    'Boundary of field - must not be in the source file\n",
-      "#    Const Boundary As String = \"AaB03x\"\n",
-      "#    \n",
-      "#    sFormData = GetFile(LocalFilePath)\n",
-      "#      \n",
-      "#    WinHttpReq.Open \"POST\", strURL, False\n",
-      "#    WinHttpReq.setRequestHeader \"Content-Type\", \"multipart/form-data; boundary=\" & Boundary\n",
-      "#\n",
-      "#    'Build source form with file contents\n",
-      "#    D = D & \"--\" & Boundary & vbCrLf\n",
-      "#    D = D & \"Content-Disposition: form-data; name=\"\"\" & DestinationFile & \"\"\"\" & \";filename=\"\"\" & DestinationFile & \"\"\"\" & vbCrLf\n",
-      "#    'MsgBox D\n",
-      "#    D = D & \"Content-Type: text/plain\" & vbCrLf & vbCrLf\n",
-      "#    D = D & sFormData & vbCrLf\n",
-      "#    D = D & \"--\" & Boundary & \"--\" & vbCrLf\n",
-      "#    \n",
-      "#    'MsgBox D\n",
-      "#    \n",
-      "#    WinHttpReq.Send D\n",
-      "#     \n",
-      "#    WinHttpReq.GetAllResponseHeaders\n",
-      "#    WinHttpReq.ResponseText\n",
-      "#    'MsgBox \"OK\"\n",
-      "#End Sub"
+      "spittalpond.SpittalPond.upload_file = upload_file        "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      " def create_toymodel():\n",
+      "    event_dict_id = None\n",
+      "    area_peril_dict_id = None\n",
+      "    vuln_dict_id = None\n",
+      "    hazard_intensity_bin_dict_id = None\n",
+      "    damage_bin_dict_id = None\n",
+      "    hazfp_version_id = None\n",
+      "    vuln_version_id = None\n",
+      "    hazfp_instance_id = None\n",
+      "    vuln_instance_id = None\n",
+      "    \n",
+      "    upload_file = \"test.txt\"\n",
+      "    upload_filename = upload_file #This name could contain the now_str\n",
+      "    upload_filepath = \"/var/www/ipython/spittalpond/\"\n",
+      "    \n",
+      "    #'Checks for login status\n",
+      "    #If isloggedin = False Then Exit Sub\n",
+      "    if True:\n",
+      "        #'create timestamp for destination files\n",
+      "        str_now = \"\"\n",
+      "        prepend_time_stamp = True #Shoudl be yest no diaglogue here.\n",
+      "        if prepend_time_stamp: \n",
+      "            str_now = time.strftime(\"%Y%m%d_%H%M%S_\", time.localtime())\n",
+      "            upload_filename = str_now + upload_filename\n",
+      "        \n",
+      "        \"\"\"\n",
+      "        'Creates Event Dict\n",
+      "        print(\"Creating Model\")\n",
+      "        #Range(\"rngDictEventFile1\").Offset(0, 8).value = str_now\n",
+      "        event_dict_id = spittal.new_event_dict(model_name, #Range(\"rngModelName\").value, \n",
+      "                                      pub_user & \"_\" & str_now & file_name, #Range(\"rngDictEventFile1\").value, \n",
+      "                                      file_name, #Range(\"rngDictEventFile1\").value, \n",
+      "                                      1 #This is some typ of value#Range(\"optModuleSupplierDict\").value\n",
+      "                    )\n",
+      "        #Range(\"rngDictEventFile1\").Offset(0, 7).value = eventdictid\n",
+      "        #Range(\"rngDictEventFile1\").Offset(0, 15).value = \"Created\"\n",
+      "        print(\"Created\")\n",
+      "        \"\"\"\n",
+      "        #dorequestObject(\"/oasis/createFileUpload/\" & name & \"/\" & filename & \"/\" & modulesupplierid & \"/\")\n",
+      "        up_response = spittal.do_request_object([\"/oasis/createFileUpload/\" + \"root\" + \"/\" + upload_filename + \"/\" + \"1\" + \"/\"])\n",
+      "        up_id = json.loads(up_response.content)['id']\n",
+      "        print(\"up_id: \", up_id)\n",
+      "        down_response = spittal.do_request_object([\"/oasis/createFileDownload/\" + \"root\" + \"/\" + upload_filename + \"/\" + \"1\" + \"/\"])\n",
+      "        down_id = json.loads(down_response.content)['id']\n",
+      "        print(\"down_id: \", down_id)\n",
+      "        #Set createAreaPerilDict = ws.dorequestObject(\"/oasis/createAreaPerilDict/\" & name & \"/\" & modulesupplierid & \"/\" & fileuploadid & \"/\" & filedownloadid & \"/\")\n",
+      "        resp = spittal.do_request_object([\"/oasis/createAreaPerilDict/\" + \"root\" + \"/\" + \"3\" + \"/\" + up_id + \"/\" + down_id + \"/\"])\n",
+      "\n",
+      "        \n",
+      "        spittal.upload_file(upload_filepath + upload_file, upload_filepath + upload_file)\n",
+      "    \n",
+      "        print(\"Model tasks created.\\n\\n\"\n",
+      "              \"Now you should upload the files to the Oasis mid-tier.\"\n",
+      "              \"Use the Upload files macro for small files (<20MB)\"\n",
+      "              \"or a file transfer tool such as WinSCP for large files.\")\n",
+      "    \n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -276,9 +177,7 @@
      "input": [
       "spittal = spittalpond.SpittalPond()\n",
       "spittal.do_login('root', 'password')\n",
-      "\n",
-      "html = create_toymodel()\n",
-      "HTML(html.content)"
+      "create_toymodel()\n"
      ],
      "language": "python",
      "metadata": {},
@@ -287,22 +186,24 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "You are logged into Mid-tier\n"
+        "You are logged into Mid-tier\n",
+        "('up_id: ', u'357')\n",
+        "('down_id: ', u'285')"
        ]
       },
       {
-       "html": [
-        "{\"status\": \"done\", \"id\": \"296\", \"success\": true, \"JobId\": \"0\"}"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 5,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "<IPython.core.display.HTML at 0x7facce380e50>"
+        "\n",
+        "me-8000-RECEIVE-OK[POST=[u'', u'\"/var/www/ipython/spittalpond/test.txt\"', u'\"/var/www/ipython/spittalpond/test.txt\"\\n        Content-Type: text/plain\\n        \\n        A test file!\\n\\n        --AaB03x--\\n        '],files=]\n",
+        "Model tasks created.\n",
+        "\n",
+        "Now you should upload the files to the Oasis mid-tier.Use the Upload files macro for small files (<20MB)or a file transfer tool such as WinSCP for large files.\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
