Breaking down the upload_directory() method.
It was getting to big so I am breaking it down.
Now it simply uploads the files in a directory to the server and also sets up the data_dict.

--- a/toymodel.ipynb
+++ b/toymodel.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c23126a6c9b9a8c0b605465b506947e8fea96168745acc9450707a3ca3e07737"
+  "signature": "sha256:e573522d1a02a6b00bb8c495fc3c8e14cbd3b9f1933f3cab12fe38c2ffbd0e89"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -75,19 +75,49 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{\"status\": \"done\", \"id\": \"66\", \"success\": true, \"JobId\": \"0\"}\n",
-        "Finally done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "Uploaded directory\n"
        ]
       }
      ],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data_dict = spittal.create_model_structures(data_dict, module_supplier_id)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Created model structures\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data_dict = spittal.load_models(data_dict)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Loaded model\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -110,13 +140,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 8,
        "text": [
-        "'{\"status\": \"failed\", \"progress\": \"none\", \"detail\": \"Django Object creation failed: VulnInstance matching query does not exist.\", \"success\": false, \"JobId\": \"0\"}'"
+        "'{\"status\": \"failed\", \"progress\": \"none\", \"detail\": \"Django Object creation failed: HazFPInstance matching query does not exist.\", \"success\": false, \"JobId\": \"0\"}'"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -131,13 +161,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 9,
        "text": [
-        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 66}'"
+        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 122}'"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -152,13 +182,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 10,
        "text": [
         "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 66, \"result\": \"FAILED\", \"Timeout\": false, \"progress\": \"FAILED\"}'"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
