Added some more documentation.

--- a/toymodel.ipynb
+++ b/toymodel.ipynb
@@ -1,13 +1,20 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e573522d1a02a6b00bb8c495fc3c8e14cbd3b9f1933f3cab12fe38c2ffbd0e89"
+  "signature": "sha256:a7acfff36edadf731a486633dd4e9c0ad7f255db9a26ace609641da76ff551e5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Toy Example"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -23,10 +30,16 @@
      "prompt_number": 1
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Setting up the basic settings needed"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Settings that I don't really know what they are doing.\n",
       "pub_user = \"root\"\n",
       "module_supplier_id = \"27\" #Added a manaual entry for this.\n",
       "do_timestamps = True\n",
@@ -40,6 +53,13 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Log in"
+     ]
     },
     {
      "cell_type": "code",
@@ -62,6 +82,13 @@
      "prompt_number": 3
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Upload the entire directory"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -80,6 +107,13 @@
       }
      ],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Create Model"
+     ]
     },
     {
      "cell_type": "code",
@@ -101,6 +135,13 @@
      "prompt_number": 5
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Load Diction"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -117,7 +158,14 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Create Benchmark"
+     ]
     },
     {
      "cell_type": "code",
@@ -140,13 +188,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 10,
        "text": [
-        "'{\"status\": \"failed\", \"progress\": \"none\", \"detail\": \"Django Object creation failed: HazFPInstance matching query does not exist.\", \"success\": false, \"JobId\": \"0\"}'"
+        "'{\"status\": \"done\", \"id\": \"3\", \"success\": true, \"JobId\": \"0\"}'"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Run Benchmark"
+     ]
     },
     {
      "cell_type": "code",
@@ -161,13 +216,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 11,
        "text": [
-        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 122}'"
+        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 237}'"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Check the status of latest job"
+     ]
     },
     {
      "cell_type": "code",
@@ -182,13 +244,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 14,
        "text": [
-        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 66, \"result\": \"FAILED\", \"Timeout\": false, \"progress\": \"FAILED\"}'"
+        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 237, \"result\": \"FINISHED\", \"Timeout\": false, \"progress\": \"FINISHED\"}'"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
