Small change in creating the benchmark.
The toymodel notebook can now complete a benchmark job!
Now I have to process the output data.

--- a/toymodel.ipynb
+++ b/toymodel.ipynb
@@ -173,9 +173,9 @@
      "input": [
       "resp = spittal.create_benchmark(\n",
       "    pub_user,\n",
-      "    data_dict['version_hazfp']['job_id'],\n",
-      "    data_dict['exposures_main']['job_id'],\n",
-      "    data_dict['version_vuln']['job_id'],\n",
+      "    data_dict['hazfp_instance']['id'],\n",
+      "    data_dict['exposures_instance']['id'],\n",
+      "    data_dict['vuln_instance']['id'],\n",
       "    4,\n",
       "    3,\n",
       "    7\n",
@@ -235,7 +235,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "resp = spittal.check_status(66, 1)\n",
+      "last_job_id = json.loads(resp.content)['JobId']\n",
+      "resp = spittal.check_status(last_job_id, 1)\n",
       "resp.content"
      ],
      "language": "python",
