Major refactoring of spittalpond class.
So about the new way I am going to lay things out.
Everything is going to be broken down into it's own class.
So in the long run we will have at least five classes:
 - SpittalBase     : Is generic and is the parent of the below classes.
 - SpittalModel    : Loads up the nessecary model. Models only needed to be
                     loaded once for each Oasis database.
 - SpittalExposure : Creates and loads exposures.
                     Can load many exposure instancse into one model.
 - SpittalRun      : Will perform tasks in order to generate data output.
 - SpittalAnalytics: Will analyze and display the generated data.

Each of these classes will encapsulate it's own data and all inherit from the generic class SpittalBase.
At the moment I am only working on the frist three of these classes. (Base, Model and Exposure)

About passing data from Model to Exposure just simply pass it as an argument.
Sometime in the future I should create a SpittalModel.get_data() method.
Hmmm, it also makes me wonder. Could I auto-populate the model data_dict
by asking the Oasis API for the appropriate data?

--- a/toymodel.ipynb
+++ b/toymodel.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a7acfff36edadf731a486633dd4e9c0ad7f255db9a26ace609641da76ff551e5"
+  "signature": "sha256:db4142ad90306311fb8cb90836d74ed13c74f84da884caf24e368c93b0f29c8c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,6 +13,15 @@
      "metadata": {},
      "source": [
       "# Toy Example"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## General Setup\n",
+      "\n",
+      "***************************************************"
      ]
     },
     {
@@ -58,6 +67,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "## Setup Model\n",
+      "\n",
+      "********************************************************************"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "#### Log in"
      ]
     },
@@ -65,8 +83,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Log into Django mid-tier\n",
-      "spittal.do_login('password')"
+      "# Log into Django mid-tier (Have to log in for each seperate instance.)\n",
+      "spittal.model.do_login('password')"
      ],
      "language": "python",
      "metadata": {},
@@ -85,7 +103,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### Upload the entire directory"
+      "#### Upload Model Files"
      ]
     },
     {
@@ -93,7 +111,7 @@
      "collapsed": false,
      "input": [
       "upload_directory = \"/home/bsimmons/Oasis/MyOasisFiles/models/\"\n",
-      "data_dict = spittal.upload_directory(upload_directory, do_timestamps)"
+      "spittal.model.upload_directory(upload_directory, do_timestamps)"
      ],
      "language": "python",
      "metadata": {},
@@ -119,7 +137,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data_dict = spittal.create_model_structures(data_dict, module_supplier_id)"
+      "spittal.model.create_model_structures(module_supplier_id)"
      ],
      "language": "python",
      "metadata": {},
@@ -128,7 +146,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Created model structures\n"
+        "Finished creating model strutures.\n"
        ]
       }
      ],
@@ -138,14 +156,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### Load Diction"
+      "#### Load Model"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data_dict = spittal.load_models(data_dict)"
+      "spittal.model.load_models()"
      ],
      "language": "python",
      "metadata": {},
@@ -164,6 +182,122 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "## Setup Exposures\n",
+      "\n",
+      "*************************************************"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Log in"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Log into Django mid-tier (Have to log in for each seperate instance.)\n",
+      "spittal.exposure.do_login('password')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "You are logged into Mid-tier\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Upload Exposure Files"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "upload_directory = \"/home/bsimmons/Oasis/MyOasisFiles/exposures/\"\n",
+      "spittal.exposure.upload_directory(upload_directory, do_timestamps)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Uploaded directory\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Create Exposure Database Structures"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "model_data_dict = spittal.model.data_dict\n",
+      "spittal.exposure.create_exposure_structure(model_data_dict, module_supplier_id)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Finished creating exposure structures.\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Load Exposure to Job Queue"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "spittal.exposure.load_models()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Loaded model\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "#### Create Benchmark"
      ]
     },
@@ -171,15 +305,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "resp = spittal.create_benchmark(\n",
-      "    pub_user,\n",
-      "    data_dict['hazfp_instance']['id'],\n",
-      "    data_dict['exposures_instance']['id'],\n",
-      "    data_dict['vuln_instance']['id'],\n",
-      "    4,\n",
-      "    3,\n",
-      "    7\n",
-      ")\n",
+      "resp = spittal.exposure.create_benchmark()\n",
       "resp.content"
      ],
      "language": "python",
@@ -188,13 +314,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 11,
        "text": [
-        "'{\"status\": \"done\", \"id\": \"3\", \"success\": true, \"JobId\": \"0\"}'"
+        "'{\"status\": \"done\", \"id\": \"6\", \"success\": true, \"JobId\": \"0\"}'"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -207,7 +333,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "resp = spittal.do_task(\"Benchmark\", 1, 1)\n",
+      "benchmark_id = json.loads(resp.content)['id']\n",
+      "resp = spittal.exposure.do_task(\"Benchmark\", 4, 1)\n",
       "resp.content"
      ],
      "language": "python",
@@ -216,13 +343,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 12,
        "text": [
-        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 237}'"
+        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 401}'"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -236,7 +363,7 @@
      "collapsed": false,
      "input": [
       "last_job_id = json.loads(resp.content)['JobId']\n",
-      "resp = spittal.check_status(last_job_id, 1)\n",
+      "resp = spittal.exposure.check_status(last_job_id, 1)\n",
       "resp.content"
      ],
      "language": "python",
@@ -247,7 +374,7 @@
        "output_type": "pyout",
        "prompt_number": 14,
        "text": [
-        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 237, \"result\": \"FINISHED\", \"Timeout\": false, \"progress\": \"FINISHED\"}'"
+        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 401, \"result\": \"FAILED\", \"Timeout\": false, \"progress\": \"FAILED\"}'"
        ]
       }
      ],
